--- a/docs/explanation/problem_format.ipynb
+++ b/docs/explanation/problem_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e9ffcc0",
+   "id": "0",
    "metadata": {},
    "source": [
     "# The Problem format\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eafc74e4",
+   "id": "1",
    "metadata": {},
    "source": [
     "\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba574d0",
+   "id": "2",
    "metadata": {},
    "source": [
     "\n",
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de743e47",
+   "id": "3",
    "metadata": {},
    "source": [
     "\n",
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a76e09f1",
+   "id": "4",
    "metadata": {},
    "source": [
     "\n",
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a3e456d",
+   "id": "5",
    "metadata": {},
    "source": [
     "\n",
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5652ee26",
+   "id": "6",
    "metadata": {},
    "source": [
     "\n",
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa851c8f",
+   "id": "7",
    "metadata": {},
    "source": [
     "\n",
@@ -1621,47 +1621,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8692e49b",
+   "execution_count": null,
+   "id": "8",
    "metadata": {
     "tags": [
      "remove_cell"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nfor model_type, instance in problem_parts_list:\\n    print(\"----------------------------------------------  \" + model_type.__name__ + \"  ----------------------------------------------\\n\")\\n\\n    print(\"<details>\\n<summary><b>Click to expand</b></summary>\\n\\n```json\\n\")\\n    print(json.dumps(model_type.model_json_schema(), indent=2))\\n    print(\"\\n```\\n</details></br>\\nand an example of the JSON object corresponding to the schema looks like:\\n\\n\"     \"</br><details><summary><b>Click to expand</b></summary>\\n\\n```json\\n\")\\n    print(instance.model_dump_json(indent=2))\\n    print(\"\\n```\\n</details>\\n\\n\")\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# these code blocks and outputs are hidden with the the tag 'hide_code' It might\n",
     "# be better to have this code block all the way at the end of the file and\n",
     "# output all the needed schemas and models, and then copy paste them to the\n",
     "# appropriate places.\n",
-    "import json\n",
     "\n",
-    "from desdeo.problem import Constant, TensorConstant, Variable, TensorVariable, Objective, Constraint, ExtraFunction, ScalarizationFunction, DiscreteRepresentation\n",
+    "from desdeo.problem import (\n",
+    "    Constant,\n",
+    "    Constraint,\n",
+    "    DiscreteRepresentation,\n",
+    "    ExtraFunction,\n",
+    "    Objective,\n",
+    "    ScalarizationFunction,\n",
+    "    TensorConstant,\n",
+    "    TensorVariable,\n",
+    "    Variable,\n",
+    ")\n",
     "from desdeo.problem.schema import ConstraintTypeEnum, ObjectiveTypeEnum, VariableTypeEnum\n",
     "\n",
-    "constant = Constant(\n",
-    "    name=\"constant example\",\n",
-    "    symbol=\"c\",\n",
-    "    value=42.1\n",
-    "    )\n",
+    "constant = Constant(name=\"constant example\", symbol=\"c\", value=42.1)\n",
     "\n",
-    "tensorConstant = TensorConstant(\n",
-    "    name=\"tensor constant example\",\n",
-    "    symbol=\"t_c\",\n",
-    "    shape=[2],\n",
-    "    values=[40, 50]\n",
-    "    )\n",
+    "tensorConstant = TensorConstant(name=\"tensor constant example\", symbol=\"t_c\", shape=[2], values=[40, 50])\n",
     "\n",
     "variable = Variable(\n",
     "    name=\"variable example\",\n",
@@ -1669,8 +1658,8 @@
     "    variable_type=VariableTypeEnum.real,\n",
     "    lowerbound=0,\n",
     "    upperbound=1,\n",
-    "    initial_value=0.5\n",
-    "    )\n",
+    "    initial_value=0.5,\n",
+    ")\n",
     "\n",
     "tensorVariable = TensorVariable(\n",
     "    name=\"tensor variable example\",\n",
@@ -1679,23 +1668,14 @@
     "    shape=[3],\n",
     "    lowerbounds=[1, 2, 3],\n",
     "    upperbounds=[10, 20, 30],\n",
-    "    initial_values=[1, 1, 1]\n",
-    "    )\n",
+    "    initial_values=[1, 1, 1],\n",
+    ")\n",
     "\n",
     "objective = Objective(\n",
-    "    name=\"objective example\",\n",
-    "    symbol=\"f\",\n",
-    "    func=\"x + 1\",\n",
-    "    is_linear=True,\n",
-    "    objective_type=ObjectiveTypeEnum.analytical\n",
-    "    )\n",
+    "    name=\"objective example\", symbol=\"f\", func=\"x + 1\", is_linear=True, objective_type=ObjectiveTypeEnum.analytical\n",
+    ")\n",
     "\n",
-    "constraint = Constraint(\n",
-    "    name=\"example constrant\",\n",
-    "    symbol=\"g\",\n",
-    "    func=\"x - c\",\n",
-    "    cons_type=ConstraintTypeEnum.LTE\n",
-    "    )\n",
+    "constraint = Constraint(name=\"example constrant\", symbol=\"g\", func=\"x - c\", cons_type=ConstraintTypeEnum.LTE)\n",
     "\n",
     "extraFunction = ExtraFunction(\n",
     "    name=\"extra function example\",\n",
@@ -1704,22 +1684,13 @@
     "    is_linear=True,\n",
     "    is_convex=True,\n",
     "    is_twice_differentiable=True,\n",
-    "    )\n",
-    "\n",
-    "scalarizationFunction = ScalarizationFunction(\n",
-    "    name=\"scalarization function example\",\n",
-    "    symbol=\"s_f\",\n",
-    "    func=\"x * e_f\"\n",
-    "    )\n",
-    "\n",
-    "discreteRepresentation = DiscreteRepresentation(\n",
-    "    variable_values={\"x\": [1]},\n",
-    "    objective_values={\"f\": [1]}\n",
     ")\n",
     "\n",
-    "type_list = [\n",
-    "    [Constant, constant]\n",
-    "]\n",
+    "scalarizationFunction = ScalarizationFunction(name=\"scalarization function example\", symbol=\"s_f\", func=\"x * e_f\")\n",
+    "\n",
+    "discreteRepresentation = DiscreteRepresentation(variable_values={\"x\": [1]}, objective_values={\"f\": [1]})\n",
+    "\n",
+    "type_list = [[Constant, constant]]\n",
     "\n",
     "\"\"\"\n",
     "Output of this cell is used to update documentation parts where JSON object are displayed.\n",
@@ -1736,7 +1707,7 @@
     "    [Constraint, constraint],\n",
     "    [ExtraFunction, extraFunction],\n",
     "    [ScalarizationFunction, scalarizationFunction],\n",
-    "    [DiscreteRepresentation, discreteRepresentation]\n",
+    "    [DiscreteRepresentation, discreteRepresentation],\n",
     "]\n",
     "\n",
     "\"\"\"\n",
