--- a/docs/explanation/scalarization.ipynb
+++ b/docs/explanation/scalarization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c6d7747f",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Scalarization\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8c5cd7c",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,20 +82,16 @@
     "from desdeo.tools import add_asf_nondiff\n",
     "\n",
     "# a Problem with the objectives 'f_1', 'f_2', 'f_3'\n",
-    "problem: Problem \n",
+    "problem: Problem\n",
     "# a reference point with an aspiration level for each objective function\n",
     "reference_point = {\"f_1\": 5.9, \"f_2\": 4.2, \"f_3\": -1.6}\n",
     "\n",
-    "problem_w_asf, target = add_asf_nondiff(\n",
-    "    problem,\n",
-    "    symbol=\"target\",\n",
-    "    reference_point=reference_point\n",
-    "    )"
+    "problem_w_asf, target = add_asf_nondiff(problem, symbol=\"target\", reference_point=reference_point)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fe8c7699",
+   "id": "2",
    "metadata": {},
    "source": [
     "In the above example, we have assumed that `Problem` has three objective functions\n",
@@ -147,30 +143,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a46eb7",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from desdeo.tools import add_epsilon_constraints\n",
     "\n",
     "# a Problem with the objectives 'f_1', 'f_2', 'f_3'\n",
-    "problem: Problem \n",
+    "problem: Problem\n",
     "# a reference point with an aspiration level for each objective function\n",
     "epsilons = {\"f_1\": 5.9, \"f_2\": 4.2, \"f_3\": -1.6}\n",
     "epsilon_symbols = {\"f_1\": \"eps_1\", \"f_2\": \"eps_2\", \"f_3\": \"eps_3\"}\n",
     "\n",
     "problem_w_eps, target, constraint_symbols = add_epsilon_constraints(\n",
-    "    problem,\n",
-    "    symbol=\"target\",\n",
-    "    constraint_symbols=epsilon_symbols,\n",
-    "    objective_symbol=\"f_2\",\n",
-    "    epsilons=epsilons\n",
+    "    problem, symbol=\"target\", constraint_symbols=epsilon_symbols, objective_symbol=\"f_2\", epsilons=epsilons\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "47e911c6",
+   "id": "4",
    "metadata": {},
    "source": [
     "In the above code example, we have the same problem as before, but now we have\n",
