--- a/docs/explanation/simulator_support.ipynb
+++ b/docs/explanation/simulator_support.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e58da478",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Simulator and surrogate support in DESDEO\n",
@@ -23,20 +23,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5519028",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\n",
-    "    \"x_1\": [1.5, 1.3, 1.4],\n",
-    "    \"x_2\": [-2.2, -2.0, -3.7],\n",
-    "    \"x_3\": [5.1, 10.7, 20.2]\n",
-    "}"
+    "{\"x_1\": [1.5, 1.3, 1.4], \"x_2\": [-2.2, -2.0, -3.7], \"x_3\": [5.1, 10.7, 20.2]}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28ac298e",
+   "id": "2",
    "metadata": {},
    "source": [
     "- `-p`: a python dict of the parameters, e.g.,"
@@ -45,19 +41,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12399764",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\n",
-    "    \"alpha\": 10,\n",
-    "    \"beta\": -2\n",
-    "}"
+    "{\"alpha\": 10, \"beta\": -2}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25c19d73",
+   "id": "4",
    "metadata": {},
    "source": [
     "The simulator file returns the objective, constraint and extra function values as a python dict\n",
@@ -68,21 +61,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f4663d",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
     "{\n",
-    "    \"f_1\": [1.5, 5.4, 10.2], # an objective\n",
-    "    \"f_2\": [-2.2, 0.1, -5.3], # an objective\n",
-    "    \"g_2\": [-0.1, -0.2, 0.0], # a constraint\n",
-    "    \"e_4\": [10, 5.1, 2.1] # an extra function\n",
+    "    \"f_1\": [1.5, 5.4, 10.2],  # an objective\n",
+    "    \"f_2\": [-2.2, 0.1, -5.3],  # an objective\n",
+    "    \"g_2\": [-0.1, -0.2, 0.0],  # a constraint\n",
+    "    \"e_4\": [10, 5.1, 2.1],  # an extra function\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e94565e8",
+   "id": "6",
    "metadata": {},
    "source": [
     "The evaluator is then responsible for gathering those values and at the end, making sure that every\n",
@@ -101,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "63b58891",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1a512f",
+   "id": "8",
    "metadata": {},
    "source": [
     "The modules `argparse` and sys are used to identify and read the argumenets passed to the simulator file.\n",
@@ -127,13 +120,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10a6f516",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import characters.fighter\n",
-    "\n",
     "from combat import duel\n",
+    "\n",
     "\n",
     "def simulator(variables: dict, parameters: dict) -> dict:\n",
     "    \"\"\"A function used to call the actual simulator.\"\"\"\n",
@@ -156,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90df5f32",
+   "id": "10",
    "metadata": {},
    "source": [
     "The \"simulator\" takes the decision variables (`variables`) and parameters (`parameters`) as\n",
@@ -173,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "616a5eed",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +175,9 @@
     "    parser = argparse.ArgumentParser()\n",
     "\n",
     "    # define help messages for when the arguments are missing\n",
-    "    vars_msg = \"Variables for the simulator as a python dict. For example: {'x_1': [0, 1, 2, 3, 4], 'x_2': [4, 3, 2, 1, 0]}.\"\n",
+    "    vars_msg = (\n",
+    "        \"Variables for the simulator as a python dict. For example: {'x_1': [0, 1, 2, 3, 4], 'x_2': [4, 3, 2, 1, 0]}.\"\n",
+    "    )\n",
     "    params_msg = \"Parameters for the simulator as a python dict. For example: {'alpha': 0.1, 'beta': 0.2}.\"\n",
     "\n",
     "    # add the expected arguments\n",
@@ -217,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a93d7d91",
+   "id": "12",
    "metadata": {},
    "source": [
     "In the script, we first initialize the argument parser and the expected arguments.\n",
