--- a/docs/explanation/test_problems.ipynb
+++ b/docs/explanation/test_problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5558309",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Test problems\n",
@@ -133,18 +133,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5d73de3",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from desdeo.problem import forest_problem\n",
     "\n",
-    "problem = forest_problem(data=[\"./tests/data/alternatives_290124.csv\", \"./tests/data/alternatives_key_290124.csv\"], holding=2)"
+    "problem = forest_problem(\n",
+    "    data=[\"./tests/data/alternatives_290124.csv\", \"./tests/data/alternatives_key_290124.csv\"], holding=2\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c69a8d0",
+   "id": "2",
    "metadata": {},
    "source": [
     "Above, we first import the problem and then initialize it for holding number 2.\n",
@@ -158,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fac4748",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "722e3168",
+   "id": "4",
    "metadata": {},
    "source": [
     "The above returns the ideal values as a python dict. For holding 2 the ideal would be"
@@ -176,16 +178,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3a393c",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "{'f_1': 42937.004, 'f_2': 2489.819, 'f_3': 53632.887}"
+    "{\"f_1\": 42937.004, \"f_2\": 2489.819, \"f_3\": 53632.887}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bb6c8b0d",
+   "id": "6",
    "metadata": {},
    "source": [
     "You can then test optimizing each objective separately by using one of the solvers in DESDEO (that supports tensors)\n",
@@ -196,19 +198,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4436fa66",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "from desdeo.problem import objective_dict_to_numpy_array\n",
-    "from desdeo.tools import GurobipySolver # you can replace this with any solver that supports tensors\n",
+    "from desdeo.tools import GurobipySolver  # you can replace this with any solver that supports tensors\n",
     "\n",
     "# initialize the solver\n",
-    "solver = GurobipySolver(problem) # again, replace GurobipySolver with the solver being tested\n",
+    "solver = GurobipySolver(problem)  # again, replace GurobipySolver with the solver being tested\n",
     "\n",
     "# optimize each objective separately\n",
-    "f_1_results = solver.solve(\"f_1_min\").optimal_objectives # always solve using <objective_symbol>_min\n",
+    "f_1_results = solver.solve(\"f_1_min\").optimal_objectives  # always solve using <objective_symbol>_min\n",
     "f_2_results = solver.solve(\"f_2_min\").optimal_objectives\n",
     "f_3_results = solver.solve(\"f_3_min\").optimal_objectives\n",
     "\n",
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7147cd5e",
+   "id": "8",
    "metadata": {},
    "source": [
     "If everything works, `np.allclose(results, ideal_array)` returns `True`.\n",
