--- a/docs/howtoguides/full_example.ipynb
+++ b/docs/howtoguides/full_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26a3cf64-3f70-43b4-ac73-73895c7357a1",
+   "id": "0",
    "metadata": {},
    "source": [
     "# A full example: from problem definition to solutions using interactive multiobjective optimization methods\n",
@@ -31,22 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5a4cbab8-719e-476c-8f42-bc1376bd2842",
+   "execution_count": null,
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from desdeo.problem import Constant, Constraint, ConstraintTypeEnum, Variable, Problem, Objective, VariableTypeEnum\n",
-    "\n",
     "# These are to just suppress warnings in the outputs of the example\n",
     "import warnings\n",
+    "\n",
+    "from desdeo.problem import Constant, Constraint, ConstraintTypeEnum, Objective, Problem, Variable, VariableTypeEnum\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9290bf53",
+   "id": "2",
    "metadata": {},
    "source": [
     "## Defining constants and variables\n",
@@ -55,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "712ae143",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd5a1dce",
+   "id": "4",
    "metadata": {},
    "source": [
     "We have defined the variables to be a real numbers by setting the attribute `variable_type=VariableTypeEnum.real`, and we have bound their values by setting the `lowerbound` and `upperbound` attributes. The `initial_value` of the variables have also been set. Notice that the `name` of the variable is only important in providing information about the variable.\n",
@@ -90,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "de97c866",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aa78434",
+   "id": "6",
    "metadata": {},
    "source": [
     "A constant has not bounds since its value, by definition, is not going to change."
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ea0d60",
+   "id": "7",
    "metadata": {},
    "source": [
     "## Defining constraints and objective functions\n",
@@ -117,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3c9d0dbb",
+   "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3197c983",
+   "id": "9",
    "metadata": {},
    "source": [
     "Similar to variables and constants, we have a `name` and a `symbol` attribute. We now also have a `func` attribute, which is the mathematical representation of the objective function. Notice how we have utilized\n",
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e171a708",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc4467d",
+   "id": "11",
    "metadata": {},
    "source": [
     "One might notice that the `func` of the constraint is not exactly the same as in our problem definition. This is because in DESDEO, constraints are expected in a standard form, where inequality constraints $g$ and equality\n",
@@ -189,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "98cede0c",
+   "execution_count": null,
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1491eb9a",
+   "id": "13",
    "metadata": {},
    "source": [
     "And that is it! We are now ready to do all kinds of interesting things with our problem. We will begin by calculating its ideal point, and approximating its nadir point.\n",
@@ -217,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9a661bec",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b9af2c",
+   "id": "15",
    "metadata": {},
    "source": [
     "We can then update our problem with the new ideal and nadir point values:"
@@ -237,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "29975611",
+   "execution_count": null,
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98277e47",
+   "id": "17",
    "metadata": {},
    "source": [
     "## Solving the problem using the reference point method\n",
@@ -258,19 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "318cd3e0",
+   "execution_count": null,
+   "id": "18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ideal values: {'f_1': -1.5, 'f_2': -1.0}\n",
-      "Nadir values: {'f_1': 1.8793571533137906e-10, 'f_2': 1.4674010989178496} (approximations!)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Ideal values: {problem.get_ideal_point()}\")\n",
     "print(f\"Nadir values: {problem.get_nadir_point()} (approximations!)\")"
@@ -278,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68597f5b",
+   "id": "19",
    "metadata": {},
    "source": [
     "We can safely assume the nadir value for $f_1$ to be (very near) zero.\n",
@@ -288,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "182c2e70",
+   "execution_count": null,
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8334dff6",
+   "id": "21",
    "metadata": {},
    "source": [
     "Let us then inspect the results:"
@@ -310,35 +301,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0ec2802f",
+   "execution_count": null,
+   "id": "22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solution 1:\n",
-      "Objective function values \t\t {'f_1': -1.3418453187349122, 'f_2': 0.2264537186251374}\n",
-      "Decision variable values \t\t {'x_1': -1.341880647083145e-10, 'x_2': 1.1074537094728327, '_alpha': -0.3945632889855735}\n",
-      "Constraint values \t\t\t {'g_1': -8.892546290661356, 'f_1_con': 6.2539222134283534e-09, 'f_2_con': 2.4414633092995075e-09}\n",
-      "---\n",
-      "Solution 2:\n",
-      "Objective function values \t\t {'f_1': -0.7709617885583611, 'f_2': -0.7086032659774049}\n",
-      "Decision variable values \t\t {'x_1': -9.232688904165525e-11, 'x_2': 0.5398117579514132, '_alpha': -0.77352746119992}\n",
-      "Constraint values \t\t\t {'g_1': -9.460188242140912, 'f_1_con': 2.557184797247203e-09, 'f_2_con': 6.224309068159073e-09}\n",
-      "---\n",
-      "Solution 3:\n",
-      "Objective function values \t\t {'f_1': -1.4902309480370677, 'f_2': 1.121699318261173}\n",
-      "Decision variable values \t\t {'x_1': -1.9339132868851074e-10, 'x_2': 1.456605409251652, '_alpha': -0.4934869770258314}\n",
-      "Constraint values \t\t\t {'g_1': -8.54339459094174, 'f_1_con': 7.387595202246189e-09, 'f_2_con': -2.10404455525115e-08}\n",
-      "---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, result in enumerate(results):\n",
-    "    print(f\"Solution {i+1}:\")\n",
+    "    print(f\"Solution {i + 1}:\")\n",
     "    print(f\"Objective function values \\t\\t {result.optimal_objectives}\")\n",
     "    print(f\"Decision variable values \\t\\t {result.optimal_variables}\")\n",
     "    print(f\"Constraint values \\t\\t\\t {result.constraint_values}\")\n",
@@ -347,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef3d5a6",
+   "id": "23",
    "metadata": {},
    "source": [
     "We can readily inspect the objective function values and decision variable values in the results. We have three solutions, because the reference point method returns $k+1$ solutions, where $k$ is the number of objective functions. We also notice some new acquittances in the results, namely `_alpha`, `f_1_con`, and `f_2_con`. These are the symbols auxiliary variables and constraints that have been added to the problem automatically when it has been scalarized by the reference point method. These can be safely ignored for the purpose of this example.\n",
@@ -357,39 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5e856a7f",
+   "execution_count": null,
+   "id": "24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solution 1:\n",
-      "Objective function values \t\t {'f_1': -0.9160487221718046, 'f_2': -0.5684256234762242}\n",
-      "Decision variable values \t\t {'x_1': -9.85984558253847e-11, 'x_2': 0.6569432064674814, '_alpha': 0.25596734413127403}\n",
-      "Constraint values \t\t\t {'g_1': -9.343056793631117, 'f_1_con': 3.743887477813956e-09, 'f_2_con': 5.8198226793315655e-09}\n",
-      "---\n",
-      "Solution 2:\n",
-      "Objective function values \t\t {'f_1': -0.39591627426061626, 'f_2': -0.9286527164391796}\n",
-      "Decision variable values \t\t {'x_1': -7.965526931189278e-11, 'x_2': 0.2671091229456987, '_alpha': 0.10997286032311551}\n",
-      "Constraint values \t\t\t {'g_1': -9.732890877133956, 'f_1_con': -3.894020772499118e-09, 'f_2_con': 6.960991727478216e-09}\n",
-      "---\n",
-      "Solution 3:\n",
-      "Objective function values \t\t {'f_1': -1.156514524606623, 'f_2': -0.22485158558614837}\n",
-      "Decision variable values \t\t {'x_1': -1.1332371382914433e-10, 'x_2': 0.8804251327704427, '_alpha': 0.09565691455471285}\n",
-      "Constraint values \t\t\t {'g_1': -9.119574867342882, 'f_1_con': 5.257607030295652e-09, 'f_2_con': 4.686439333823067e-09}\n",
-      "---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reference_point = {\"f_1\": -1.3, \"f_2\": -1.2}\n",
     "\n",
     "results = rpm_solve_solutions(problem, reference_point=reference_point)\n",
     "\n",
     "for i, result in enumerate(results):\n",
-    "    print(f\"Solution {i+1}:\")\n",
+    "    print(f\"Solution {i + 1}:\")\n",
     "    print(f\"Objective function values \\t\\t {result.optimal_objectives}\")\n",
     "    print(f\"Decision variable values \\t\\t {result.optimal_variables}\")\n",
     "    print(f\"Constraint values \\t\\t\\t {result.constraint_values}\")\n",
@@ -398,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7900597",
+   "id": "25",
    "metadata": {},
    "source": [
     "Perhaps unsurprisingly, we got different results after changing the reference point. We can keep iterating the method by changing the reference point until we find something we are satisfied with (or the decision maker is!).\n",
