--- a/docs/howtoguides/how_to_define_a_problem.ipynb
+++ b/docs/howtoguides/how_to_define_a_problem.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "    variable_type=VariableTypeEnum.integer,\n",
     "    lowerbound=2,\n",
     "    upperbound=24,\n",
-    "    initial_value=2\n",
+    "    initial_value=2,\n",
     ")"
    ]
   },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     "    variable_type=VariableTypeEnum.real,\n",
     "    lowerbounds=[0.0, 0.0],  # Bounds may be specified for each element separately...\n",
     "    upperbounds=100.0,  # ...or one value can be provided, which will be used for all elements.\n",
-    "    initial_values=[50.0, 50.0]\n",
+    "    initial_values=[50.0, 50.0],\n",
     ")"
    ]
   },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
     "    maximize=False,\n",
     "    is_convex=True,\n",
     "    is_linear=True,\n",
-    "    is_twice_differentiable=True\n",
+    "    is_twice_differentiable=True,\n",
     ")\n",
     "\n",
     "emissions = Objective(\n",
@@ -246,7 +246,7 @@
     "    maximize=False,\n",
     "    is_convex=False,\n",
     "    is_linear=False,\n",
-    "    is_twice_differentiable=False\n",
+    "    is_twice_differentiable=False,\n",
     ")\n",
     "\n",
     "performance = Objective(\n",
@@ -256,7 +256,7 @@
     "    objective_type=ObjectiveTypeEnum.analytical,\n",
     "    is_convex=True,\n",
     "    is_linear=True,\n",
-    "    is_twice_differentiable=True\n",
+    "    is_twice_differentiable=True,\n",
     ")"
    ]
   },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
     "    cons_type=ConstraintTypeEnum.LTE,\n",
     "    is_convex=True,\n",
     "    is_linear=True,\n",
-    "    is_twice_differentiable=True\n",
+    "    is_twice_differentiable=True,\n",
     ")\n",
     "\n",
     "safety_rating_constraint = Constraint(\n",
@@ -336,7 +336,7 @@
     "    cons_type=ConstraintTypeEnum.LTE,\n",
     "    is_convex=True,\n",
     "    is_linear=True,\n",
-    "    is_twice_differentiable=True\n",
+    "    is_twice_differentiable=True,\n",
     ")\n",
     "\n",
     "material_composition_constraint = Constraint(\n",
@@ -346,7 +346,7 @@
     "    cons_type=ConstraintTypeEnum.EQ,\n",
     "    is_convex=True,\n",
     "    is_linear=True,\n",
-    "    is_twice_differentiable=True\n",
+    "    is_twice_differentiable=True,\n",
     ")"
    ]
   },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
     "    variables=[x_1, x_2, y],\n",
     "    constants=[ideal_n_cylinders, fuel_efficiency_th, safety_th],\n",
     "    objectives=[cost, emissions, performance],\n",
-    "    constraints=[fuel_efficiency_constraint, safety_rating_constraint, material_composition_constraint]\n",
+    "    constraints=[fuel_efficiency_constraint, safety_rating_constraint, material_composition_constraint],\n",
     ")"
    ]
   },
