--- a/docs/explanation/parsing_and_evaluating.ipynb
+++ b/docs/explanation/parsing_and_evaluating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a3df3cae",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Parsing and evaluating problems\n",
@@ -230,17 +230,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d46b43c",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "problem = problem_w_simulator_and_surrogate()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab721fc4",
+   "id": "2",
    "metadata": {},
    "source": [
     "The problem we defined has at least some simulator or surrogate based objectives,\n",
@@ -255,25 +254,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96799987",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\n",
-    "    \"s_1\": {\n",
-    "        \"alpha\": 0.1,\n",
-    "        \"beta\": 0.2\n",
-    "    },\n",
-    "    \"s_2\": {\n",
-    "        \"epsilon\": 10,\n",
-    "        \"gamma\": 20\n",
-    "    }\n",
-    "}"
+    "{\"s_1\": {\"alpha\": 0.1, \"beta\": 0.2}, \"s_2\": {\"epsilon\": 10, \"gamma\": 20}}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a8fe930c",
+   "id": "4",
    "metadata": {},
    "source": [
     "where `s_1` and `s_2` are symbols of two simulator and the corresponding values\n",
@@ -293,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "053b6f21",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,25 +295,16 @@
     "evaluator = Evaluator(\n",
     "    problem=problem,\n",
     "    params={\n",
-    "        \"s_1\": {\n",
-    "            \"alpha\": 0.1,\n",
-    "            \"beta\": 0.2\n",
-    "        },\n",
-    "        \"s_2\": {\n",
-    "            \"epsilon\": 10,\n",
-    "            \"gamma\": 20\n",
-    "        },\n",
+    "        \"s_1\": {\"alpha\": 0.1, \"beta\": 0.2},\n",
+    "        \"s_2\": {\"epsilon\": 10, \"gamma\": 20},\n",
     "    },\n",
-    "    surrogate_paths={\n",
-    "        \"f_1\": f\"{path_to_surrogate_model_1}\",\n",
-    "        \"f_2\": f\"{path_to_surrogate_model_2}\"\n",
-    "    }\n",
+    "    surrogate_paths={\"f_1\": f\"{path_to_surrogate_model_1}\", \"f_2\": f\"{path_to_surrogate_model_2}\"},\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "856ada0a",
+   "id": "6",
    "metadata": {},
    "source": [
     "As the evaluator is initialized, it calls the `_load_surrogates` method\n",
@@ -353,22 +334,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc0f8fb",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xs = {\n",
-    "    \"x_1\": [0.2, 0.5, 0.7, 0.1],\n",
-    "    \"x_2\": [-1.1, -2.1, -3.1, -4.1],\n",
-    "    \"x_3\": [3, 4, 2, 6]\n",
-    "}\n",
+    "xs = {\"x_1\": [0.2, 0.5, 0.7, 0.1], \"x_2\": [-1.1, -2.1, -3.1, -4.1], \"x_3\": [3, 4, 2, 6]}\n",
     "\n",
     "results = evaluator.evaluate(xs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "98d3a6c7",
+   "id": "8",
    "metadata": {},
    "source": [
     "The evaluator returns a polars Dataframe with each decision variable, objective,\n",
